# skelter

./: .gitignore  README.md  build_exe.py  main.py  pyproject.toml  requirements.txt  setup.py  skelter.spec
skelter/cli/: main.py  prompts.py  renderer.py
skelter/server/: main.py
skelter/server/agent/: planner.py  prompts.py
skelter/server/api/: generate.py
skelter/server/core/: client.py  models.py  utils.py
